[FE] Feat : 리덕스 툴킷 설정, 로그인 페이지 설

--- a/back/lab/build.gradle
+++ b/back/lab/build.gradle
@@ -29,12 +29,16 @@ dependencies {
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
 	testCompileOnly 'org.projectlombok:lombok'
 	testAnnotationProcessor 'org.projectlombok:lombok'
 
 	implementation 'org.modelmapper:modelmapper:3.2.0'
+
 }
 
 tasks.named('test') {
