--- a/back/lab/build.gradle
+++ b/back/lab/build.gradle
@@ -36,6 +36,7 @@ dependencies {
 
 	implementation 'org.modelmapper:modelmapper:3.2.0'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'jakarta.validation:jakarta.validation-api:3.0.0'
 }
 
 tasks.named('test') {
