--- a/front/lab/package.json
+++ b/front/lab/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
     "react-ymd-date-select": "^0.3.0",
+    "redux": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
