[Be] Feat : 구글 API 활용 이메일 인증 기능 추가, Modify: User에서 필요없는 컬럼 birth 삭제

--- a/back/lab/src/main/resources/application.yml
+++ b/back/lab/src/main/resources/application.yml
@@ -7,6 +7,23 @@ spring:
     username: scott
     password: tiger
     driver-class-name: com.mysql.cj.jdbc.Driver
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: jwlee20541@gmail.com
+    password: olkynnqbssbbuuvj
+    properties:
+      mail:
+        smtp:
+          auth: true 
+          starttls: 
+            enable: true 
+            required: true
+          connectiontimeout: 5000
+          timeout: 5000
+          writetimeout: 5000
+
+          
 
   jpa:
     hibernate:
@@ -33,3 +50,4 @@ logging:
       springframework:
         security:
           web: trace
+      
