--- a/back/lab/build.gradle
+++ b/back/lab/build.gradle
@@ -39,6 +39,7 @@ dependencies {
 
 	implementation 'org.modelmapper:modelmapper:3.2.0'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
 }
 
 tasks.named('test') {
