--- a/front/lab/package.json
+++ b/front/lab/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.379.0",
     "react": "^18.3.1",
     "react-cookie": "^7.1.4",
