--- a/front/lab/package.json
+++ b/front/lab/package.json
@@ -20,6 +20,7 @@
     "lucide-react": "^0.379.0",
     "react": "^18.3.1",
     "react-cookie": "^7.1.4",
+    "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
