--- a/front/lab/package.json
+++ b/front/lab/package.json
@@ -22,6 +22,7 @@
     "react-cookie": "^7.1.4",
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.3.1",
+    "react-kakao-maps-sdk": "^1.1.27",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
