[FE] : Modify: 채팅창 수정", [BE] STOMP 채팅 적용

--- a/back/lab/build.gradle
+++ b/back/lab/build.gradle
@@ -40,6 +40,15 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 
+	// https://mvnrepository.com/artifact/org.springframework/spring-websocket
+	implementation 'org.springframework:spring-websocket:6.1.8'
+	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-websocket
+	implementation 'org.springframework.boot:spring-boot-starter-websocket:3.3.0'	
+
+
+
+
+
 	implementation 'com.google.code.gson:gson:2.10.1'
 
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
