--- a/back/lab/build.gradle
+++ b/back/lab/build.gradle
@@ -40,10 +40,12 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 
-	// https://mvnrepository.com/artifact/org.springframework/spring-websocket
-	implementation 'org.springframework:spring-websocket:6.1.8'
-	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-websocket
-	implementation 'org.springframework.boot:spring-boot-starter-websocket:3.3.0'	
+	// // https://mvnrepository.com/artifact/org.springframework/spring-websocket
+	// implementation 'org.springframework:spring-websocket:6.1.8'
+	// // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-websocket
+	// implementation 'org.springframework.boot:spring-boot-starter-websocket:3.3.0'	
+
+	implementation 'org.springframework.boot:spring-boot-starter-websocket'
 
 
 
