--- a/front/lab/package.json
+++ b/front/lab/package.json
@@ -17,8 +17,11 @@
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "global": "^4.4.0",
+    "install": "^0.13.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.379.0",
+    "npm": "^10.8.1",
     "react": "^18.3.1",
     "react-cookie": "^7.1.4",
     "react-daum-postcode": "^3.1.3",
@@ -26,8 +29,7 @@
     "react-kakao-maps-sdk": "^1.1.27",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
-    "react-scripts": "5.0.1",
-    "react-slick": "^0.30.2",
+    "react-scripts": "^5.0.1",
     "react-ymd-date-select": "^0.3.0",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
