--- a/front/lab/package.json
+++ b/front/lab/package.json
@@ -27,9 +27,11 @@
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.3.1",
     "react-kakao-maps-sdk": "^1.1.27",
+    "react-modal": "^3.16.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.2",
     "react-ymd-date-select": "^0.3.0",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
