--- a/front/lab/package.json
+++ b/front/lab/package.json
@@ -46,6 +46,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+
+  "proxy": "http://localhost:8282",
+
   "eslintConfig": {
     "extends": [
       "react-app",
