[FE] 동네 장터 카테고리 교환, 나눔일 때 금액 출력 안되게 수정

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,13 @@
   "configurations": [
     {
       "type": "java",
+      "name": "LabApplication",
+      "request": "launch",
+      "mainClass": "com.mlp.lab.LabApplication",
+      "projectName": "back"
+    },
+    {
+      "type": "java",
       "name": "Spring Boot-LabApplication<lab>",
       "request": "launch",
       "cwd": "${workspaceFolder}",
