--- a/back/lab/src/main/resources/application.yml
+++ b/back/lab/src/main/resources/application.yml
@@ -1,11 +1,11 @@
 server:
-  port: 8282
+  port: 22222
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/labdb
-    username: scott
-    password: tiger
+    url: jdbc:mysql://223.130.157.92:3306/labdb
+    username: livinglab
+    password: livinglab
     driver-class-name: com.mysql.cj.jdbc.Driver
   mail:
     host: smtp.gmail.com
